@@ -1,3 +1,8 @@
+Thu Mar 24 15:43:14 CET 2005    Frediano Ziglio <freddy77@angelfire.com>
+	* include/tds.h src/tds/numeric.c src/tds/numeric.pl:
+	* src/tds/unittests/numeric.c:
+	- change precision and scale of numeric together
+
 Wed Mar 23 17:50:56 CET 2005    Frediano Ziglio <freddy77@angelfire.com>
 	* src/tds/Makefile.am: fix distribution
 	* src/tds/numeric.c: fix compile, remove ugly goto
